<resources>
    <!-- Global Strings used by many layouts -->
    <string name="app_name">Android Challenge</string>
    <string name="ivKingdomImageDescription">Image of the kingdom</string>

    <!-- Signup Activity Strings -->
    <string name="tvSignupHeader">Welcome</string>
    <string name="tvSignupSubheader">Please signup</string>
    <string name="etNameHint">Name</string>
    <string name="etEmailHint">Email</string>
    <string name="bSignup">Submit</string>
    <string name="ivMainLogoDescription">Image of the applications main logo</string>


    <!-- Kingdoms List Fragment Strings -->
    <string name="tvQuestsCompletedPreText">Quests completed: </string>
        <!-- Kingdoms List Fragment Menu Strings -->
        <string name="action_logout">Log Out</string>

    <!-- Kingdom Card View Item Strings -->
    <string name="ivChevronArrowDescription">Image of a chevron arrow for</string>


    <!-- Detailed Kingdom Fragment Strings -->
    <string name="tvClimatePreText">Climate: </string>
    <string name="tvPopulationPreText">Population: </string>
    <string name="tvQuestsAmountPreText">Quests: </string>

    <!-- Kingdom Fragment Strings -->
    <string name="bPreviousPage">Previous</string>
    <string name="bNextPage">Next</string>


    <!-- Quest Fragment Strings -->
    <string name="tvQuestGiverNamePreText">Quest Giver:</string>
    <string name="noQuestDescription">No description given for this quest.</string>
    <string name="tbComplete">Complete Quest</string>
    <string name="questCompleted">Quest completed:</string>
    <string name="ivGiverImageDescription">Image of the giver of the quest</string>
    <string name="ivQuestCompletedDescription">Image of a check mark</string>


</resources>
