<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/signup_fragment_horizontal_margin"
    android:paddingRight="@dimen/signup_fragment_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/signupBackgroundColor"
    android:gravity="center"
    tools:context=".SignupFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/ivMainLogoDescription"/>

    <TextView
        android:id="@+id/tvSignupHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvSignupHeader"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tvSignupSubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/tvSignupSubheader"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/etNameHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:hint="@string/etEmailHint"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/bSignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/bSignup"
        android:textColor="@color/colorButtonText"
        android:background="@color/colorAccent"
        android:textAllCaps="true"/>

</LinearLayout>
