<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivKingdomImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/ivKingdomImageDescription"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_toRightOf="@id/ivKingdomImage"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tvKingdomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:layout_marginBottom="-3dp"
                android:layout_gravity="center_vertical"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvQuestsCompletedPreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tvQuestsCompletedPreText"/>

                <TextView
                    android:id="@+id/tvQuestsCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ivChevronArrowDescription"
            android:src="@drawable/chevron_arrow"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
