<?xml version="1.0" encoding="utf-8"?>

    <!-- CircleImageView https://github.com/hdodenhof/CircleImageView -->
    <!--Copyright 2014 - 2015 Henning Dodenhof-->

    <!--Licensed under the Apache License, Version 2.0 (the "License");-->
    <!--you may not use this file except in compliance with the License.-->
    <!--You may obtain a copy of the License at-->

    <!--http://www.apache.org/licenses/LICENSE-2.0-->

    <!--Unless required by applicable law or agreed to in writing, software-->
    <!--distributed under the License is distributed on an "AS IS" BASIS,-->
    <!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
    <!--See the License for the specific language governing permissions and-->
    <!--limitations under the License.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/ivQuestImageBackground"
            android:contentDescription="@string/ivQuestImageDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <!-- CircleImageView from https://github.com/hdodenhof/CircleImageView -->
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivQuestImage"
            android:contentDescription="@string/ivQuestImageDescription"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPrimary"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingBottom="25dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tvQuestDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvQuestGiverNamePreText"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvQuestGiverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuestCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:textSize="20sp"
            android:text="@string/questCompleted"/>

        <TextView
            android:id="@+id/tbCompleteQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tbComplete"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <ImageView
            android:id="@+id/ivQuestCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/button_checkmark"
            android:contentDescription="@string/ivQuestCompletedDescription"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>